# remove-users-from-github-org-script

./: README.md  example_users.csv  github-user-removal-script.md  github_org_user_removal.py  pyproject.toml
github_org_user_removal/: __init__.py  __main__.py  crypto.py  logger.py  remover.py  validator.py
tests/: __init__.py  test_crypto.py  test_logger.py  test_validator.py
